# auto-driving-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  split_ds.py  tempCodeRunnerFile  visualize  visualize.cpp  visualize.py  visualize_ali.py
ICP C++/: 1.pcd  CMakeLists.txt  ICP.cpp  README.md  compute_baselines.cpp  dataset.cpp  dataset.h  frame.cpp  frame.h  ground_registration.cpp  ground_registration.h  icp.cpp  main.cpp  metrics.cpp  metrics.h  pipeline.cpp  pipeline.h  pose.txt  unused.cpp  visualizer.cpp  visualizer.h
ICP_CPP/: CMakeLists.txt  dataset.cpp  icp.cpp  main.cpp  metrics.cpp  metrics.h  visualizer.cpp  visualizer.h
IPC_C++/: CMakeLists.txt  main.cpp
